# do-with-in

./: Cargo.toml  README.md  import_base_test.$  import_base_test2.$  scratch
do_with_in_base/: Cargo.toml  README.md
do_with_in_base/src/: lib.rs
do_with_in_base/tests/: error_handling.rs  missing_variable.$
do_with_in_internal_macros/: Cargo.toml  README.md
do_with_in_internal_macros/src/: lib.rs
do_with_in_internal_macros/tests/: do_with_in_test.rs  import.$  import.%  import_2.$
do_with_in_unquote/: Cargo.toml
do_with_in_unquote/src/: lib.rs
examples/: mem.rs  typed-html.rs
src/: lib.rs
tests/: do_with_in_test.rs
