[package]
name = "do-with-in"
version = "0.1.0"
edition = "2021"
authors = ["Justin (:flaviusb) Marsh <justin.marsh@flaviusb.net>"]
description = "A template language for Rust metaprogramming using partial staging."
license = "GPL-3.0-only"
readme = "README.md"
#license-file = "LICENSE"
homepage = "https://github.com/flaviusb/do-with-in"
repository = "https://github.com/flaviusb/do-with-in"
keywords = ["metaprogramming", "templates"]

[lib]

[dev-dependencies]
axohtml = "0.5"

[[example]]
name = "typed-html"

[workspace]
members = ["do_with_in_base", "do_with_in_internal_macros",]

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "fold", "extra-traits", "parsing", "proc-macro"] }
proc-macro2 = "1.0"
do-with-in-base = { path = "do_with_in_base", version = "0.1.0", features = ["doc-kludge"] }
do-with-in-internal-macros = { path = "do_with_in_internal_macros", version = "0.1.0", features = ["doc-kludge"] }
