[package]
name = "do-with-in-base"
version = "0.1.2"
edition = "2021"
authors = ["Justin (:flaviusb) Marsh <justin.marsh@flaviusb.net>"]
description = "A template language for Rust metaprogramming using partial staging."
license = "GPL-3.0-only"
readme = "README.md"
#license-file = "LICENSE"
homepage = "https://github.com/flaviusb/do-with-in"
repository = "https://github.com/flaviusb/do-with-in"

[lib]
doctest = false

[features]
doc-kludge = []

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "fold", "extra-traits", "parsing", "proc-macro"] }
proc-macro2 = "1.0"
bimap = "0.6.2"
