[package]
name = "do-with-in-unquote"
version = "0.1.0"
edition = "2021"
authors = ["Justin (:flaviusb) Marsh <justin.marsh@flaviusb.net>"]
description = "A template language for Rust metaprogramming using partial staging."
license = "GPL-3.0"
#readme = "README.md"
#license-file = "LICENSE"
homepage = "https://github.com/flaviusb/do-with-in"
repository = "https://github.com/flaviusb/do-with-in"

[lib]

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "fold", "extra-traits", "parsing", "proc-macro"] }
proc-macro2 = "1.0"
do-with-in-base = { path = "../do_with_in_base", version = "0.1.0" }
do-with-in-internal-macros = { path = "../do_with_in_internal_macros", version = "0.1.0" }
